# leagueDectect

./: .env.example  .gitignore  Cargo.toml  README.md
src/: cache.rs  config.rs  error.rs  main.rs  rate_limit.rs
src/analysis/: champion_stats.rs  mod.rs  recommender.rs
src/api/: client.rs  endpoints.rs  models.rs
src/display/: output.rs
