[package]
name = "league_detect"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP & JSON
ureq = { version = "2.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config
dotenvy = "0.15"

# Rate limiting
governor = "0.10"

# UX
colored = "2.1"
tabled = "0.16"
indicatif = "0.17"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
